<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colores"> <!-- Reemplaza esto con la imagen de fondo -->

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="455dp"
        android:background="@color/lila"
        android:layout_marginTop="75dp"
        android:layout_marginStart="35dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/naranja"
                android:text="@string/tvTituloMain" />
        <TextView
            android:id="@+id/txtcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/naranja"
            android:text="@string/txtingresacorreo"/>

            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/edtingresacorreo"
                android:background="@drawable/textview_background"/>

        <TextView
            android:id="@+id/txtcontraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/naranja"
            android:text="@string/txtingresacorreo"/>

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/edtingresacorreo"
                android:paddingStart="10dp"
                android:background="@drawable/textview_background" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Recordar"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="¿Olvidé mi contraseña?"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
            <Button
                android:id="@+id/btnInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:text="@string/btnInicioSesion" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/txtnotengocuenta" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
